Fixed issues with summaries display on mobile

--- a/_prototypes/end-to-end/style.css
+++ b/_prototypes/end-to-end/style.css
@@ -562,6 +562,15 @@ p.label--negative:empty {
   border-bottom: 1px solid #888;
 }
 
+@media only screen and (max-width: 500px) {
+
+.summary__link {
+    text-align: left;
+    display: inline-block;
+    margin-top: .5rem;
+  }
+}
+
 .list.list--people-plain {
   margin-bottom : 1rem;
   list-style-type : none;
